--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
             <version>2.13.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>2.11.1</version>
+        </dependency>
     </dependencies>
 
     <properties>
