--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,6 @@ build/
 .DS_Store
 
 # ignore created text, json, xml files
-src/main/resources/text/*
-src/main/resources/json/*
-src/main/resources/xml/*
+src/main/resources/text/*.txt
+src/main/resources/json/*.json
+src/main/resources/xml/*.xml
